# OpenDCC

./: .clang-format  .clang-format-ignore  .cmake-format  .gitignore  .pre-commit-config.yaml  BUILD.md  CMakeLists.txt  CONTRIBUTORS.md  Makefile  NOTICE.txt  README.md  THIRD_PARTY_LICENSES.txt  build-on-release-fixed.yml  build-on-release.yml  build.py  dependencies.yaml  opendccConfig.cmake.in  requirements.txt  setup_dependencies.py  setup_env.bat  update_qt_includes.py  update_qt_includes.sh
.claude/: settings.local.json
src/lib/: CMakeLists.txt
src/lib/opendcc/: CMakeLists.txt  opendcc.h.in
src/lib/opendcc/app/: CMakeLists.txt
src/lib/opendcc/app/core/: api.h  application.cpp  application.h  command_utils.cpp  command_utils.h  half_edge_cache.cpp  half_edge_cache.h  interval_vector.cpp  interval_vector.h  mesh_bvh.cpp  mesh_bvh.h  plugInfo.json.in  point_cloud_bvh.cpp  point_cloud_bvh.h  py_interp.cpp  py_interp.h  python_module.cpp  rich_selection.cpp  rich_selection.h  selection_list.cpp  selection_list.h  sentry_logging_delegate.cpp  sentry_logging_delegate.h  session.cpp  session.h  settings.cpp  settings.h  stage_watcher.cpp  stage_watcher.h  topology_cache.cpp  topology_cache.h  usd_clipboard.cpp  usd_clipboard.h  usd_edit_undo_command.cpp  usd_edit_undo_command.h  usd_edit_undo_watcher.cpp  usd_edit_undo_watcher.h  wrap_application.cpp  wrap_application.h  wrap_selection_list.cpp  (+9 more)
src/lib/opendcc/app/ui/: application_ui.cpp  application_ui.h  global_event_filter.cpp  global_event_filter.h  main_window.cpp  main_window.h  main_window_timeline.cpp  node_icon_registry.cpp  node_icon_registry.h  panel_factory.cpp  panel_factory.h  qt_utils.cpp  qt_utils.h  shader_node_registry.cpp  shader_node_registry.h  wrap_node_icon_registry.cpp  wrap_node_icon_registry.h  wrap_panel.cpp  wrap_panel.h  wrap_shader_node_registry.cpp  wrap_shader_node_registry.h  wrap_shiboken.cpp  wrap_shiboken.h
src/lib/opendcc/app/viewport/: def_cam_settings.cpp  def_cam_settings.h  hd_selection_ext.cpp  hd_selection_ext.h  hydra_ext_render_session_api_adapter.cpp  hydra_ext_render_session_api_adapter.h  hydra_ext_render_session_api_schema.cpp  hydra_ext_render_session_api_schema.h  hydra_render_settings.cpp  hydra_render_settings.h  istage_resolver.h  iviewport_compositing_extension.cpp  iviewport_compositing_extension.h  iviewport_draw_extension.h  iviewport_tool_context.cpp  iviewport_tool_context.h  iviewport_ui_extension.cpp  iviewport_ui_extension.h  offscreen_render.cpp  offscreen_render.h  persistent_material_override.cpp  persistent_material_override.h  prim_material_override.cpp  prim_material_override.h  render_process.cpp  render_process.h  shadow_matrix.h  texture_plugin.cpp  texture_plugin.h  tool_settings_view.cpp  tool_settings_view.h  tool_settings_widget.h  ui_camera_mapper.cpp  ui_camera_mapper.h  usd_render.cpp  usd_render.h  usd_render_control.cpp  usd_render_control.h  usd_viewport_locator_data.cpp  usd_viewport_locator_data.h  (+92 more)
src/lib/opendcc/base/: CMakeLists.txt  app_version.cpp  app_version.h  defines.h  export.h  lua.h  qt_python.h
src/lib/opendcc/base/app_config/: CMakeLists.txt  api.h  config.cpp  config.h
src/lib/opendcc/base/commands_api/: CMakeLists.txt
src/lib/opendcc/base/crash_reporting/: CMakeLists.txt  api.h  sentry_crash_handler.cpp  sentry_crash_handler.h
src/lib/opendcc/base/ipc_commands_api/: CMakeLists.txt  api.h  command.cpp  command.h  command_registry.cpp  command_registry.h  ipc.h  server.cpp  server.h  server_info.cpp  server_info.h  server_registry.cpp  server_registry.h
src/lib/opendcc/base/logging/: CMakeLists.txt  api.h  default_logging_delegate.cpp  default_logging_delegate.h  logger.cpp  logger.h  logging_delegate.h  logging_utils.h
src/lib/opendcc/base/packaging/: CMakeLists.txt  api.h  core_properties.cpp  core_properties.h  filesystem_package_provider.cpp  filesystem_package_provider.h  package.cpp  package.h  package_entry_point.cpp  package_entry_point.h  package_loader.cpp  package_loader.h  package_parser.h  package_provider.h  package_registry.cpp  package_registry.h  package_resolver.cpp  package_resolver.h  toml_parser.cpp  toml_parser.h
src/lib/opendcc/base/py_utils/: CMakeLists.txt  api.h  error.cpp  error.h  lock.h
src/lib/opendcc/base/pybind_bridge/: boost.h  pybind11.h  shiboken.h  usd.h
src/lib/opendcc/base/test_runner/: CMakeLists.txt  main.cpp
src/lib/opendcc/render_system/: CMakeLists.txt  api.h  bind.cpp  irender.h  render_factory.cpp  render_factory.h  render_system.cpp  render_system.h
src/lib/opendcc/render_view/: CMakeLists.txt
src/lib/opendcc/ui/: CMakeLists.txt
src/lib/opendcc/usd/: CMakeLists.txt
src/lib/usd/: CMakeLists.txt
src/lib/usd/usd_fallback_proxy/: CMakeLists.txt
src/lib/usd/usd_ui_ext/: CMakeLists.txt  __init__.py  fix_generated.py  module.cpp  schema.usda
src/python/: CMakeLists.txt
src/python/opendcc/: close_event_filter.py  current_edit_target.py  dll_path_fix.py  file_menu.py  hooks.py  i18n.py  icon_registry.py  layouts.py  preferences_widget.py  render_toolbar.py  selection_mode.py  session_ui.py  session_widget.py  snap_mode.py  stage_utils.py  startup.py  tree_ui_utils.py  ui_utils.py  undo.py  usd_ipc.py  usd_ui_utils.py
src/python/opendcc/actions/: center_pivot.py  change_prims_visibility.py  create_geometry_menu.py  create_lights_menu.py  create_mesh.py  create_prim.py  create_reference.py  custom_widget_action.py  duplicate_prims.py  group_prims.py  options_widget.py  panels_menu.py  remove_prim.py  reparent_prim.py  set_instanceable.py  tab_toolbar.py  tab_toolbar.qss  tab_toolbar_light.qss  tool_context_actions.py  tool_settings_button.py  unparent_prim.py
src/python/opendcc/bake_ui/: bake_window.py
src/python/opendcc/core/: __init__.py
src/python/opendcc/plugin_manager/: __init__.py  plugin_manager.py
src/python/opendcc/preferences/: color_management_page.py  color_theme_page.py  common_page.py  def_cam_page.py  render_page.py  undo_page.py  viewport_page.py
src/python/opendcc/pygments_utils/: pygmentshighlighter.py  style.py  usd_lexer.py
(+410 files in other folders)
